--- a/my-app/src/components/Searchbar.css
+++ b/my-app/src/components/Searchbar.css
@@ -4,7 +4,6 @@
     border: 1px solid rgba(0,0,0,0.3); 
     border-radius: 30px; 
     padding: 5px;
-    max-width: 1000px; 
     margin-left: 24%;
     margin-right: 18px;
     margin-top: 8px;
@@ -71,3 +70,29 @@
     justify-content: center;
     margin-top: 10px;
   }
+
+  .empty-message {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+@media screen and (max-width: 500px) { 
+
+  .new-search{
+    transform: scale(0.8);
+  }
+}
+@media screen and (max-width: 400px) { 
+
+  .new-search{
+    transform: scale(0.7);
+  }
+}
+@media screen and (max-width: 340px) { 
+
+  .new-search{
+    transform: scale(0.65);
+  }
+}
